--- a/index.html
+++ b/index.html
@@ -300,9 +300,8 @@
                   <dl>
                     <dt><a href=http://www.tikeke.com/html/Contact/contactss/>联系方式</a></dt>
                     <dd>重庆市缇可可科技有限公司</dd>
-                    <dd>公司地址：重庆市南岸区南城大道199号(南岸区老区府)重庆国际电子商务产业园3楼 </dd>
+                    <dd>公司地址：重庆市两江新区星光大道68号 </dd>
                     <dd>公司传真： 17059950015 </dd>
-                    <dd>邮箱：admin@rxcn.net </dd>
                   </dl>
                 </li>
                 <li>
@@ -317,16 +316,15 @@
                 </li>
                 <li>
                   <dl class="last">
-                    <dt><a href="http://www.tikeke.com/html/Contact/contactss/">客服中心</a></dt>
+                    <dt><a href="http://sighttp.qq.com/authd?IDKEY=2c85f139fa6614a5460a47321e5ab9d018378b5630856204">客服中心</a></dt>
                     <dd>服务热线：17059950015</dd>
-                    <dd><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=3356005201&amp;site=qq&amp;menu=yes"><img border="0" src="static/picture/qqkf.jpg" alt="我们竭诚为您服务！" title="我们竭诚为您服务！"></a></dd>
+                    <dd><a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=2c85f139fa6614a5460a47321e5ab9d018378b5630856204"><img border="0" src="static/picture/qqkf.jpg" alt="我们竭诚为您服务！" title="我们竭诚为您服务！"></a></dd>
                   </dl>
                 </li>
                 <li>
                   <dl class="last">
                     <dt><a href="http://www.tikeke.com/html/Contact/contactss/">咨询与投诉</a></dt>
                     <dd><a href="#" style="float:left;">网站备案</a></dd>
-                    <dd>资料：admin@rxcn.net</dd>
                     <dd>技术支持：17059950015</dd>
                     <dd>投诉热线：17059950015</dd>
                   </dl>
@@ -339,7 +337,7 @@
     </div>
     <div class="gh"> <a href="#"></a> </div>
     <div class="info">
-      <h4>业务咨询：023-<span>17059950015</span> / 售后服务：023-<span>17059950015</span></h4>
+      <h4>业务咨询：<span>17059950015</span> / 售后服务：<span>17059950015</span></h4>
       <ul>
         <li><a href="#" class="a1" title="内部OA">内部OA</a></li>
         <li><a href="#" class="a3" title="客户管理">客户管理</a></li>
